--- a/public/css/cartaside.css
+++ b/public/css/cartaside.css
@@ -49,7 +49,7 @@
     font-size: 16px;
 }
 
-.cart-aside-content .dashboard-main-content {
+.cart-aside-content .cart-main-content {
     border: 0;
 }
 
